<resources>
    <string name="section_patient_management">PATIENT MANAGEMENT</string>
    <string name="title_add_patient">Add patient</string>
    <string name="subtitle_add_patient">Register a new patient record</string>
    <string name="title_search_patient">Search patient</string>
    <string name="subtitle_search_patient">View and manage patients</string>
    <string name="title_custom_patient_list">Patient list(s)</string>
    <string
        name="subtitle_custom_patient_list"
    >Load a saved patient list</string>
    <string name="section_encounters">ENCOUNTERS</string>
    <string name="title_group_encounter">Start Group/Family session</string>
    <string
        name="subtitle_group_encounter"
    >Start session with multiple patients</string>
    <string name="section_system">SYSTEM</string>
    <string name="title_sync_info">Sync info</string>
    <string name="sync_info">Sync info</string>
    <string
        name="subtitle_sync_info"
    >View pending synchronization resources</string>
    <string name="title_unsynced_resources">Unsynced resources</string>
    <string
        name="subtitle_unsynced_resources"
    >View synchronization processes</string>
    <string name="app_name" translatable="false">OpenMRS</string>
    <string name="title_patient_list">Registered Patients</string>
    <string name="title_patient_detail">SamplePatient Detail</string>
    <string name="patient_details_title">Patient Details</string>
    <string name="register_patient">Register Patient</string>
    <string name="menu_about">About Fhir Engine</string>
    <string name="menu_sync_resources">Sync Resources</string>
    <string name="menu_patient_edit">@string/edit_patient</string>
    <string name="observation_brief_text">%1$s: %2$s\nEffective: %3$s</string>
    <string name="query_hint_patient_search">Find by Patient Name</string>
    <string
        name="cancel_questionnaire_message"
    >Are you sure you want to discard the answers?</string>
    <string name="resume_group_session">Resume previous session?</string>
    <string
        name="resume_group_session_message"
    >We found a saved draft for this session. Would you like to resume it?</string>
    <string
        name="resume_group_session_message_with_name"
    >We found a saved draft for %1$s. Would you like to resume it?</string>
    <string name="resume_session">Resume session</string>
    <string name="start_new_session">Start new session</string>
    <string name="save_as_draft">Save as draft</string>
    <string name="discard">Discard</string>
    <string name="submit_all">Submit all</string>
    <string name="draft_saved">Draft saved.</string>
    <string
        name="complete_screener_before_submit"
    >Complete the screener before submitting all responses.</string>
    <string name="patient_id">Id</string>
    <string name="patient_name">Name</string>
    <string name="patient_gender">Gender</string>
    <string name="patient_dob">DOB</string>
    <string name="patient_phone_number">Phone Number</string>
    <string name="patient_city">City</string>
    <string name="patient_country">Country</string>
    <string name="patient_is_active">Is Active</string>
    <string name="patient_property_mobile">Mobile Number</string>
    <string name="patient_property_address">Address</string>
    <string name="patient_property_dob">Date of Birth</string>
    <string name="patient_property_gender">Gender</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="new_encounter">New Encounter</string>
    <string name="create_encounter">Create Encounter</string>
    <string name="create_group_encounter">Create Group Encounter</string>
    <string name="edit_encounter">Edit Encounter</string>
    <string name="location">Location</string>
    <string name="identifier">Identifier</string>
    <string name="select_a_location">Select a Location</string>
    <string
        name="create_encounter_fragment_headline"
    >What form would you like to use?</string>
    <string name="select_patient_lists">Select Patient Lists</string>
    <string name="select_identifier_types">Select Identifier Types</string>
    <string name="submit">Submit</string>
    <string name="message_syncing">Syncing\u2026</string>
    <string name="message_patient_updated">Patient is updated.</string>
    <string name="message_encounter_updated">Encounter is updated.</string>
    <string name="inputs_missing">Inputs are missing.</string>
    <string
        name="inputs_missing_for_patient"
    >Inputs are missing for patient:</string>
    <string name="resources_saved">Resources are saved.</string>
    <string
        name="response_received"
    >questionnaire response is received.</string>
    <string name="html_text">Current status: <font
            color="#ddd"
        >UNKNOWN</font></string>
    <string name="header_observation">Observations</string>
    <string name="header_conditions">Conditions</string>
    <string name="message_no_datetime">No effective DateTime</string>
    <string name="complete_survey">Complete Survey</string>
    <string name="risk_status">Current status: </string>
    <string name="unknown">UNKNOWN</string>
    <string name="none">none</string>
    <string name="description_status">Status</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sync_menu">Sync</string>
    <string name="last_sync">Last sync</string>
    <string name="syncing">Syncing</string>
    <string name="sync">Sync</string>
    <string name="button_login">Log in</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="header_encounters">Encounters</string>
    <string name="component_nav_heading">Components</string>
    <string name="layout_nav_heading">Layouts</string>
    <string name="behavior_nav_heading">Behaviors</string>
    <string name="error">Error</string>
    <string name="open_questionnaire">Open questionnaire</string>
    <string name="current_location_label">Current Location : </string>
    <string name="no_location_selected">No Location Selected</string>
    <string
        name="patient_unsynced_info"
    >Patient information will synchronize with\nPearl next time you are online</string>
    <string name="header_visits">Visit Header</string>
    <string name="online">Online</string>
    <string
        name="network_status_connected_to_server"
    >Connected to server</string>
    <string name="network_status_server_unreachable">Server unreachable</string>
    <string name="offline">Offline</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string
        name="no_and_don_t_ask_me_again"
    >No, and don\'t ask me again</string>
    <string name="login_expired">Login Expired</string>
    <string
        name="session_expired"
    >Your session has expired. Do you want to re-login?</string>
    <string name="logout">Logout</string>
    <string
        name="logout_message"
    >Are you sure you want to log out? \n\nIf you proceed, All of this applications data will be deleted permanently. \nThis includes all resources, user sessions, database etc.</string>
    <string
        name="logout_unavailable_internet_only_message"
    >Unable to log out while the server is unreachable. Please reconnect when the server is available and try again.</string>
    <string
        name="logout_unavailable_offline_message"
    >Unable to log out while offline. Please reconnect to the internet and try again.</string>
    <string name="sync_in_progress">Sync: in progress</string>
    <string name="sync_started">Sync: started</string>
    <string name="sync_succeeded_at">Sync: succeeded at %1$s</string>
    <string name="sync_failed_at">Sync: failed at %1$s</string>
    <string name="sync_unknown_state">Sync: unknown state.</string>
    <string name="sync_terminated">Sync: Terminated</string>
    <string name="start_time_with_value">Start Time: %1$s</string>
    <string
        name="sync_session_progress"
    >Downloaded %1$d/%2$d | Uploaded %3$d/%4$d</string>
    <string name="completed_at_with_value">Completed At: %1$s</string>
    <string name="errors_with_count">Errors: %1$d</string>
    <string name="logging_out">Logging out..</string>
    <string
        name="sync_device_offline_message"
    >Device Offline. Sync will resume as soon as the device is Online</string>
    <string
        name="sync_server_unreachable_message"
    >Cannot reach the configured server. Sync will resume once the server is available.</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="initial_sync">Initial sync</string>
    <string name="initial_sync_started">Initial sync started</string>
    <string name="initial_sync_completed">Initial sync completed</string>
    <string name="initial_sync_failed">Initial sync failed</string>
    <string
        name="token_expiry_delay_text"
    >Delay Before Token Expiry Dialog (in Minutes)</string>
    <string
        name="check_network_connectivity"
    >Check Network Connectivity</string>
    <string name="show_network_status">Show Network Status</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="settings_discarded">Settings Discarded</string>
    <string name="settings_saved">Settings Saved</string>
    <string
        name="token_check_delay_in_minutes"
    >Token Check Delay (in minutes)</string>
    <string name="token_check_delay">Token Check Delay</string>
    <string
        name="periodic_sync_delay_in_minutes"
    >Periodic Sync Delay (in minutes)</string>
    <string name="periodic_sync_delay">Periodic Sync Delay</string>
    <string name="send_diagnostics">Send Diagnostics</string>
    <string
        name="diagnostics_message"
    >Do you want to send a full application diagnostic report to the developer team?\nIncludes: Application Logs &amp; Sync Info</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string
        name="username_password_empty"
    >Username or password cannot be empty.</string>
    <string
        name="invalid_username_password"
    >Login failed. Please check your credentials.</string>
    <string
        name="no_internet_connection"
    >No internet connection. Please check your network and try again.</string>
    <string name="empty_state_icon">Empty State Icon</string>
    <string
        name="no_unsynced_resources_available"
    >No Unsynced Resources Available</string>
    <string name="delete_all">Delete All</string>
    <string name="download_all">Download All</string>
    <string name="no_locations_available">No Locations available.</string>
    <string name="select_location">Select Location</string>
    <string name="search_a_location">Search a location</string>
    <string name="next">Next</string>
    <string
        name="select_patients_for_group_encounter"
    >Select Patients for Group Encounter</string>
    <string name="select_all_patients">Select All Patients</string>
    <string name="start">Start</string>
    <string
        name="you_can_do_other_things_on_the_device_while_it_syncs"
    >You can do other things on the device while it syncs.</string>
    <string
        name="leave_the_device_in_a_location_with_good_internet_reception"
    >Leave the device in a location with good internet reception</string>
    <string
        name="stay_connected_to_wi_fi_or_data"
    >Stay connected to Wi-Fi or data</string>
    <string
        name="this_can_take_up_to_10_minutes_depending_on_your_internet_connection"
    >This can take up to 10 minutes depending on your internet connection</string>
    <string name="syncing_resources">Syncing resources</string>
    <string name="get_started">Get started</string>
</resources>