<?xml version="1.0" encoding="utf-8" ?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
<group android:checkableBehavior="single">
  <item
            android:id="@+id/menu_sync"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/sync_menu"
        />
  <item
            android:id="@+id/menu_current_location"
            android:icon="@drawable/ic_location"
            android:title="@string/no_location_selected"
        />
  <item
            android:id="@+id/menu_select_identifier"
            android:icon="@drawable/ic_file"
            android:title="@string/select_identifier_types"
        />
  <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"
        />
  <item
            android:id="@+id/menu_diagnostics"
            android:title="@string/send_diagnostics"
            android:icon="@drawable/ic_diagnostics"
            app:showAsAction="never"
        />
  <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
        />
</group>
</menu>
